<resources>
    <string name="app_name">Compara Preços</string>

<!--    Label com uma palavra-->
    <string name="label_sim">Sim</string>
    <string name="label_nao">Não</string>
    <string name="label_atencao">Atenção</string>
    <string name="label_titulo">Título</string>
    <string name="label_comparar">Comparar</string>
    <string name="label_agurade">Aguarde</string>
    <string name="label_valor">Valor</string>
    <string name="label_peso">Peso</string>
    <string name="label_quantidade">Quantidade</string>
    <string name="label_medida_unidade">un</string>
    <string name="label_medida_peso">kg</string>
    <string name="label_resumo">Resumo</string>
    <string name="label_entendi">Entendi</string>
    <string name="label_atual">Atual</string>
    <string name="label_comparada">Comparada</string>
    <string name="label_temas">Temas</string>
    <string name="label_ok">OK</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_default">Padrão</string>
    <string name="label_claro">Claro</string>
    <string name="label_escuro">Escuro</string>
<!--    Label com uma palavra-->

<!--    Label com duas palavras-->
    <string name="label_lista_compras">Lista de Compras</string>
    <string name="label_nova_lista_compra">Nova lista</string>
    <string name="label_campo_obrigatorio">Campo obrigatório!</string>
    <string name="label_abrir_lista">Abrir lista</string>
    <string name="label_renomear_lista">Renomear lista</string>
    <string name="label_deletar_lista">Deletar lista</string>
    <string name="label_preco_unitario">Preço unitário</string>
    <string name="label_adicionar_produto">Adicionar produto</string>
    <string name="label_produto_removido">Produto removido</string>
    <string name="label_editar_produto">Editar produto</string>
    <string name="label_produto_editado">Produto editado</string>
    <string name="label_lista_atual">Lista atual</string>
    <string name="label_lista_comparada">Lista comparada</string>
    <string name="label_duplicar_lista">Duplicar lista</string>
    <string name="label_editando_produto">Editando produto</string>
    <string name="label_quantidade_invalida">Quantidade inválida</string>
    <string name="label_produto_adicionado">Produto adicionado</string>
    <string name="label_verde_eucalipto">Verde eucalipto</string>
    <string name="label_uva_roxa">Uva roxa</string>
    <string name="label_rosa_suave">Rosa suave</string>
    <string name="label_verao_laranja">Verão laranja</string>
    <string name="label_doce_rubi">Doce rubi</string>
    <string name="label_opera_cafe">Opera café</string>
    <string name="label_padrao_sistema">Padrão sistema</string>
<!--    Label com duas palavras-->


<!--    Label com tres palavras-->
    <string name="label_criando_compra">Criando nova compra</string>
    <string name="label_abrir_lista_comparando">Abrir lista comparando</string>
    <string name="label_lista_comparada_com">Lista comparada com</string>
    <string name="label_criar_lista_compra">Criar lista de compra</string>
    <string name="label_duplicar_lista_compra">Duplicar lista de compra</string>
    <string name="label_lista_compra_duplicada">Lista de compra duplicada</string>
    <string name="label_renomear_lista_compra">Renomear lista de compra</string>
    <string name="label_nome_lista_atualizado">Nome da Lista atualizado</string>
    <string name="label_lista_compra_excluida">Lista de compra excluída</string>
    <string name="label_erro_excluir_lista_compra">Erro ao excluir lista</string>
    <string name="label_informe_nome_produto">Informe o nome do produto</string>
    <string name="label_usar_tema_dinamico">Usar Tema dinâmico</string>
    <string name="label_preferencia_modo_noturno">Preferência modo noturno</string>
    <string name="label_ordenacao_lista">Ordenação da lista</string>
<!--    Label com tres palavras-->

<!--    Label com frases-->
    <string name="label_desc_nova_lista_compra">Vamos criar sua nova lista de compras. Se você tiver outras listas, você pode compara-las.</string>
    <string name="label_desc_duplicar_lista">Você esta criando uma nova lista a partir da lista %s. Todos os produtos da lista selecionada serão adiconados na nova lista.</string>
    <string name="label_desc_renomear_lista_compra">Você esta renomeando a lista de compra selecionada. Capricha no novo nome.</string>
    <string name="label_desc_selecionar_lista">Selecione a lista que deseja comparar:</string>
    <string name="label_desc_lista_compra_vazia">Você não criou nenhuma lista de compra. Vamos começar agora? Clique no botão +.</string>
    <string name="label_desc_lista_compra_criada">Lista de compra criada.</string>
    <string name="label_desc_lista_compra_excluida">Lista de compra excluída.</string>
    <string name="label_esse_produto_e">Esse produto é …</string>
    <string name="label_lista_compra_nao_encontrada">Nenhuma lista de compra foi encontrada.</string>
    <string name="label_lista_compra_comparada_nao_encontrada">A lista de compra para comparar não foi encontrada.</string>
    <string name="label_desc_lista_produto_vazia">Essa lista de compra não tem nenhum produto.</string>
    <string name="label_desc_erro_excluir_produto">Erro ao excluir o produto.</string>
    <string name="label_desc_erro_editar_produto">Erro ao editar o produto.</string>
    <string name="label_desc_produto_existente">Você já tem um produto na lista com o nome %s. Deseja somar a quantidade inserida do novo produto (%s) no produto que já esta na lista?</string>
    <string name="label_desc_finalizar_lista">Deseja finalizar a lista de compra?</string>
    <string name="label_desc_erro_titulo_lista">Digite o nome da lista</string>
    <string name="label_desc_erro_criar_lista">Erro ao criar a lista.</string>
    <string name="label_desc_erro_atualizar_lista">Erro ao renomear a lista. Tente novamente.</string>
    <string name="label_desc_carregando_listas">Carregando suas listas…</string>
    <string name="label_desc_aguarde_carregando_lista_produto">Aguarde um momento.\nEstamos preparando sua lista de compra.</string>
    <string name="label_desc_erro_listas_to_comparar">Não ha listas para comparar</string>
    <string name="label_desc_erro_buscar_listas_compra">Não ha listas para comparar</string>
    <string name="label_desc_adicionar_lista_to_comparar">Adicione uma lista com produtos para começar a comparar.</string>
    <string name="label_selecione_lista_to_comparar">Selecione uma lista de compra</string>
    <string name="label_desc_necessario_duas_listas_to_comparar">Para ver o resumo, você deve adicionar uma lista para comparar.</string>
    <string name="label_erro_generico">alguma coisa deu errado</string>
    <string name="label_desc_resumo_economizou_mesmos_produtos">Você economizou em relação a lista comparada somando somente os mesmos produtos. Parabéns!</string>
    <string name="label_desc_resumo_preco_igual_mesmos_produtos">Os preços estão iguais nas duas listas somando somente os mesmos produtos.</string>
    <string name="label_desc_resumo_nao_economizou_mesmos_produtos">Você gastou mais em relação a lista comparada somando somente os mesmos produtos.</string>
    <string name="label_desc_resumo_economizou_todos_produtos">Você economizou em relação a lista comparada somando todos os produtos. Parabéns!</string>
    <string name="label_desc_resumo_preco_igual_todos_produtos">Os preços estão iguais nas duas listas somando todos os produtos.</string>
    <string name="label_desc_resumo_nao_economizou_todos_produtos">Você gastou mais em relação a lista comparada somando todos os produtos.</string>
    <string name="label_desc_somando_todos_produtos">Somando todos os produtos da lista</string>
    <string name="label_desc_somando_produtos_nas_listas">Produtos que estão nas duas listas: %d</string>
<!--    Label com frases-->

    <!--    Label organizacao lista-->
    <string name="label_de_a_z">De Aa-Zz</string>
    <string name="label_de_z_a">De Zz-Aa</string>
    <string name="label_adicionado_primeiro">Adicionado primeiro</string>
    <string name="label_adicionado_ultimo">Adicionado por último</string>
    <!--    Label organizacao lista-->

<!--    Label onboarding -->
    <string name="label_onboarding_0_title">Bem vindo ao Compara preços</string>
    <string name="label_onboarding_1_title">Crie suas listas de compras</string>
    <string name="label_onboarding_2_title">Adicione produtos e compare com outras listas.</string>
    <string name="label_onboarding_3_title">Veja o resumo da comparação.</string>

    <string name="label_onboarding_0_subtitle">Que bom ver você por aqui, vamos conhecer um pouco sobre o app?.</string>
    <string name="label_onboarding_1_subtitle">Aqui você pode criar, renomear, duplicar e apagar quantas listas quiser…</string>
    <string name="label_onboarding_2_subtitle">Você podem comparar as listas depois de adicionar alguns produtos nelas…</string>
    <string name="label_onboarding_3_subtitle">Aqui você vê o resumo da sua comparação. Bem simples né? Bora começar?</string>
<!--    Label onboarding -->

<!--    Label content description-->
    <string name="description_adicionar_lista_to_comparar">Adicionar lista para comparar</string>
    <string name="description_compartilhar_resumo">Compartilhar resumo</string>
<!--    Label content description-->


<!--    Label plural-->
    <plurals name="label_plural_produto">
        <item quantity="zero">Produto</item>
        <item quantity="one">Produto</item>
        <item quantity="other">Produtos</item>
    </plurals>
    <plurals name="label_plural_item">
        <item quantity="zero">Item</item>
        <item quantity="one">Item</item>
        <item quantity="other">Itens</item>
    </plurals>
<!--    Label plural-->



</resources>