...
                    botaoPlusPressionado = false
                    if (quantidade != 1) quantidade--
                    onQuantidadeChange(quantidade.toString())
                },
                iconImageVector = Icons.Rounded.RemoveCircleOutline,
                iconTint = MaterialTheme.colorScheme.error,
                iconContentDescription = "Remover quantidade"
            )

            Row(modifier = Modifier
                .padding(top = dimensionResource(id = R.dimen.small))) {
                CustomTextCounter(
                    counter = quantidade
...
                    botaoPlusPressionado = true
                    quantidade++
                    onQuantidadeChange(quantidade.toString())
                },
                iconImageVector = Icons.Rounded.AddCircleOutline,
                iconTint = MediumSeaGreen,
                iconContentDescription = "Adicionar quantidade"
            )
        }
    }
}

@Preview
...
